sumo/tests/sumo/errors/routes/emptyroute_emitteremission/errors.sumo
Error: Attribute 'edges' in definition of route '0' is empty.
Quitting (on error).
